--- a/index.html
+++ b/index.html
@@ -8,15 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Пример игры</h1>
-        <p>Добро пожаловать в историю обновлений игры "Пример игры". Следите за изменениями, которые произошли с 2010 по 2025 год.</p>
+        <h1>TalkingFriendsRU</h1>
+        <p>Добро пожаловать в историю обновлений.</p>
     </header>
-
-    <section>
-        <h2>Описание игры</h2>
-        <p>Это захватывающая приключенческая игра, в которой игроки путешествуют по волшебному миру, решая головоломки и сражаясь с врагами.</p>
-        <img src="game_icon.png" alt="Иконка игры">
-    </section>
 
     <section>
         <a href="version_history.html">Перейти к истории версий</a>
