--- a/version_history.html
+++ b/version_history.html
@@ -8,28 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>История версий игры</h1>
+        <h1>Wealth Affirmations</h1>
         <p>Выберите год для просмотра обновлений и изменений в игре.</p>
     </header>
 
     <section>
-        <h2>Версия 1.0.0</h2>
-        <p>Дата релиза: 2010-03-15</p>
+        <h2>Версия 1.0.1</h2>
+        <p>Дата релиза: 2010-02-09</p>
         <h3>Что нового:</h3>
         <ul>
             <li>Запуск игры.</li>
-            <li>Основной сюжет и первые миссии.</li>
-            <li>Базовые механики управления.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Версия 1.1.0</h2>
-        <p>Дата релиза: 2011-07-01</p>
-        <h3>Что нового:</h3>
-        <ul>
-            <li>Новые персонажи и локации.</li>
-            <li>Оптимизация графики и исправление багов.</li>
+            <li>Changed minimum iPhone OS version requirement to 3.0.</li>
         </ul>
     </section>
 
