--- a/index.html
+++ b/index.html
@@ -4,17 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>История версии игры - Пример игры</title>
+    <title>История версий игр</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <header>
-        <h1>TalkingFriendsRU</h1>
-        <p>Добро пожаловать в историю обновлений.</p>
+        <h1>История версий игр</h1>
+        <p>Добро пожаловать на сайт, где можно узнать об обновлениях и версиях разных игр!</p>
     </header>
 
     <section>
-        <a href="version_history.html">Перейти к истории версий</a>
+        <h2>Список игр</h2>
+        <ul>
+            <!-- Ссылки на игры -->
+<li><a href="games/game1/index.html">Игра 1</a></li>
+<li><a href="games/game2/index.html">Игра 2</a></li>
+<li><a href="games/game3/index.html">Игра 3</a></li>
+<li><a href="games/game4/index.html">Игра 4</a></li>
+<li><a href="games/game5/index.html">Игра 5</a></li>
+<li><a href="games/game6/index.html">Игра 6</a></li>
+<li><a href="games/game7/index.html">Игра 7</a></li>
+<li><a href="games/game8/index.html">Игра 8</a></li>
+<li><a href="games/game9/index.html">Игра 9</a></li>
+<li><a href="games/game10/index.html">Игра 10</a></li>
+<li><a href="games/game11/index.html">Игра 11</a></li>
+<li><a href="games/game12/index.html">Игра 12</a></li>
+<li><a href="games/game13/index.html">Игра 13</a></li>
+<li><a href="games/game14/index.html">Игра 14</a></li>
+<li><a href="games/game15/index.html">Игра 15</a></li>
+<li><a href="games/game16/index.html">Игра 16</a></li>
+<li><a href="games/game17/index.html">Игра 17</a></li>
+<li><a href="games/game18/index.html">Игра 18</a></li>
+<li><a href="games/game19/index.html">Игра 19</a></li>
+<li><a href="games/game20/index.html">Игра 20</a></li>
+<li><a href="games/game21/index.html">Игра 21</a></li>
+<li><a href="games/game22/index.html">Игра 22</a></li>
+<li><a href="games/game23/index.html">Игра 23</a></li>
+<li><a href="games/game24/index.html">Игра 24</a></li>
+<li><a href="games/game25/index.html">Игра 25</a></li>
+<li><a href="games/game26/index.html">Игра 26</a></li>
+<li><a href="games/game27/index.html">Игра 27</a></li>
+<li><a href="games/game28/index.html">Игра 28</a></li>
+<li><a href="games/game29/index.html">Игра 29</a></li>
+<li><a href="games/game30/index.html">Игра 30</a></li>
+<li><a href="games/game31/index.html">Игра 31</a></li>
+<li><a href="games/game32/index.html">Игра 32</a></li>
+<li><a href="games/game33/index.html">Игра 33</a></li>
+<li><a href="games/game34/index.html">Игра 34</a></li>
+<li><a href="games/game35/index.html">Игра 35</a></li>
+<li><a href="games/game36/index.html">Игра 36</a></li>
+<li><a href="games/game37/index.html">Игра 37</a></li>
+<li><a href="games/game38/index.html">Игра 38</a></li>
+<li><a href="games/game39/index.html">Игра 39</a></li>
+<li><a href="games/game40/index.html">Игра 40</a></li>
+<li><a href="games/game41/index.html">Игра 41</a></li>
+<li><a href="games/game42/index.html">Игра 42</a></li>
+<li><a href="games/game43/index.html">Игра 43</a></li>
+<li><a href="games/game44/index.html">Игра 44</a></li>
+<li><a href="games/game45/index.html">Игра 45</a></li>
+<li><a href="games/game46/index.html">Игра 46</a></li>
+<li><a href="games/game47/index.html">Игра 47</a></li>
+<li><a href="games/game48/index.html">Игра 48</a></li>
+<li><a href="games/game49/index.html">Игра 49</a></li>
+<li><a href="games/game50/index.html">Игра 50</a></li>
+
+        </ul>
     </section>
 </body>
 </html>
-    
