--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Список игр</h2>
         <ul>
             <!-- Ссылки на игры -->
-<li><a href="games/game1/index.html">Игра 1</a></li>
+<li><a href="games/game1/index.html">Wealth Affirmations</a></li>
 <li><a href="games/game2/index.html">Игра 2</a></li>
 <li><a href="games/game3/index.html">Игра 3</a></li>
 <li><a href="games/game4/index.html">Игра 4</a></li>
